crates/weft-snapshots/tests/snapshots/html-data/corpus-orders.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: corpus-orders as html-data
---
<!doctype html>
<html lang="en">
<head>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1">
<title>Orders</title>
<style>
:root {
  --weft-space-xs: 4px;
  --weft-space-sm: 8px;
  --weft-space-md: 16px;
  --weft-space-lg: 24px;
  --weft-space-xl: 32px;
  --weft-radius-sm: 4px;
  --weft-radius-md: 8px;
  --weft-radius-pill: 999px;
  --weft-font-size-sm: 0.875rem;
  --weft-font-size-md: 1rem;
  --weft-font-size-lg: 1.25rem;
  --weft-font-size-xl: 1.75rem;
  --weft-color-white: #ffffff;
  --weft-color-ink: #1a1c21;
  --weft-color-blue-_root: #2563eb;
  --weft-color-red: #dc2626;
  --weft-color-action-primary: #2563eb;
  --weft-color-action-danger: #dc2626;
}
.weft-stack { display: flex; flex-direction: column; }
.weft-row { display: flex; flex-direction: row; }
.weft-grid { display: grid; }
[data-align="start"] { align-items: flex-start; }
[data-align="center"] { align-items: center; }
[data-align="end"] { align-items: flex-end; }
[data-align="stretch"] { align-items: stretch; }
[data-wrap] { flex-wrap: wrap; }
a { display: inline-block; }
[hidden] { display: none !important; }
</style>
</head>
<body>
<main data-weft-id="orders" aria-label="Orders">
  <h2 data-weft-id="title">Orders</h2>
  <table data-weft-id="open-orders" aria-label="Open orders" data-state="ready">
    <thead>
      <tr>
        <th data-weft-id="col-id" scope="col" aria-sort="descending" data-action="press:orders.sortById">Order</th>
        <th data-weft-id="col-total" scope="col" aria-sort="none">Total</th>
      </tr>
    </thead>
    <tbody>
      <tr data-weft-id="order[0]" aria-selected="true" data-action="press:orders.open">
        <td data-weft-id="order-id[0]">A-1002</td>
        <td data-weft-id="order-total[0]">
          <div data-weft-id="order-amount[0]" data-weft-kind="text">$120.00</div>
        </td>
      </tr>
      <tr data-weft-id="order[1]" aria-selected="false" data-action="press:orders.open">
        <td data-weft-id="order-id[1]">A-1001</td>
        <td data-weft-id="order-total[1]">
          <div data-weft-id="order-amount[1]" data-weft-kind="text">$35.50</div>
        </td>
      </tr>
    </tbody>
  </table>
  <table data-weft-id="archived" aria-label="Archived orders" data-state="empty">
    <thead>
      <tr>
        <th data-weft-id="col-archived" scope="col">Order</th>
      </tr>
    </thead>
    <tbody>
      <tr data-weft-slot="empty">
        <td colspan="1">
          <div data-weft-id="archived-empty" data-weft-kind="text">Nothing archived yet.</div>
        </td>
      </tr>
    </tbody>
  </table>
  <table data-weft-id="pending" aria-label="Pending orders" data-state="loading">
    <thead>
      <tr>
        <th data-weft-id="col-pending" scope="col">Order</th>
      </tr>
    </thead>
    <tbody>
      <tr data-weft-id="pending-row" aria-selected="true">
        <td data-weft-id="pending-cell">Fetching…</td>
      </tr>
    </tbody>
  </table>
</main>
</body>
</html>
